# SDaLi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  SDaLi  cmake_install.cmake  hello
Builders/Image/include/: ImageBuilder.h
Builders/Image/src/: ImageBuilder.cpp
Builders/Window/include/: WindowBuilder.h
Builders/Window/src/: WindowBuilder.cpp  WindowTestBuilder.cpp
Builders/include/: IBuilder.h  WindowBuilder.h
Builders/src/: Builder.cpp  IBuilder.cpp  WindowBuilder.cpp
Image/include/: ImageManager.h
Image/src/: ImageManager.cpp
Window/include/: WindowManager.h
Window/src/: WindowManager.cpp
include/: IBuilder.h  WindowBuilder.h  WindowManager.h
src/: WindowBuilder.cpp  WindowManager.cpp  main.cpp
